# zodiac_chat_bot

./: .env  .gitignore  Dockerfile  celery_app.py  celeryconfig.py  config.py  create_json_for_api.py  database.py  docker-compose.yml  horoscope_parser.py  keyboards.py  main.py  pyproject.toml  requirements.txt  send_data_to_database.py  zodiac_signs.json
database/: database.py  database_manager.py  send_sodiac_signs_to_database.py
migrations/: env.py
migrations/versions/: 098830a768a7_add_new_tables.py  c049d64163d9_create_database.py
models/: models.py
parser/: horoscope_parser.py  scraper.py  urls_for_parsing.py
utils/: horoscope_parser.py  keyboards.py  love_horoscope_parsers.py
zodiacs_data/Близнецы/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Весы/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Водолей/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Дева/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Козерог/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Лев/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Овен/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Рак/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Рыбы/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Скорпион/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Стрелец/: horoscope_data.json  index.html  index.html_json.json
zodiacs_data/Телец/: horoscope_data.json  index.html  index.html_json.json
