[tool.poetry]
name = "zodiac"
version = "0.1.0"
description = ""
authors = ["Andrei Khomich"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.11.1"
asyncpg = "0.27.0"
attrs = "23.1.0"
beautifulsoup4 = "4.12.2"
build = "0.10.0"
cachecontrol = "0.12.11"
certifi = "2023.5.7"
charset-normalizer = "3.1.0"
cleo = "2.0.1"
colorama = "0.4.6"
crashtest = "0.4.1"
distlib = "0.3.6"
dulwich = "0.21.5"
filelock = "3.12.0"
greenlet = "2.0.2"
html5lib = "1.1"
idna = "3.4"
importlib-metadata = "6.6.0"
installer = "0.7.0"
jaraco-classes = "3.2.3"
jsonschema = "4.17.3"
keyring = "23.13.1"
lockfile = "0.12.2"
mako = "1.2.4"
markupsafe = "2.1.2"
more-itertools = "9.1.0"
msgpack = "1.0.5"
packaging = "23.1"
pexpect = "4.8.0"
pkginfo = "1.9.6"
platformdirs = "3.5.1"
poetry = "1.5.1"
poetry-core = "1.6.1"
poetry-plugin-export = "1.4.0"
psycopg2-binary = "2.9.6"
ptyprocess = "0.7.0"
pyproject-hooks = "1.0.0"
pyrsistent = "0.19.3"
python-dotenv = "1.0.0"
pywin32-ctypes = "0.2.0"
rapidfuzz = "2.15.1"
requests = "2.31.0"
requests-toolbelt = "1.0.0"
shellingham = "1.5.0.post1"
six = "1.16.0"
soupsieve = "2.4.1"
sqlalchemy = "2.0.15"
telebot = "0.0.5"
tomlkit = "0.11.8"
trove-classifiers = "2023.5.24"
typing-extensions = "4.6.0"
urllib3 = "1.26.16"
virtualenv = "20.23.0"
webencodings = "0.5.1"
zipp = "3.15.0"
python-telegram-bot = "^20.3"
aiogram = "^2.25.1"
dateparser = "^1.1.8"
isort = "^5.12.0"
flake8 = "^6.0.0"
gunicorn = "^20.1.0"
celery = "^5.3.1"
redis = "^4.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
